--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
 
         # Next.jsへ接続
         location / {
-            proxy_pass http://next:3000;
+            proxy_pass http://nextjs:3000;
         }
     }
 }
