--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,17 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
+    "date-fns-tz": "^3.2.0",
+    "highlight.js": "^11.11.1",
+    "microcms-js-sdk": "^3.2.0",
+    "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5"
   }
 }
