--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cheerio": "^1.1.2",
     "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "highlight.js": "^11.11.1",
+    "lucide-react": "^0.546.0",
     "microcms-js-sdk": "^3.2.0",
     "next": "15.5.2",
     "react": "19.1.0",
