--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "cheerio": "^1.1.2",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.23.24",
@@ -17,7 +18,8 @@
     "microcms-js-sdk": "^3.2.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
